fix gap

--- a/src/Product.module.css
+++ b/src/Product.module.css
@@ -10,7 +10,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-content: baseline;
-  gap: 20px;
+  gap: 40px 20px;
   border-radius: 10px;
   background-color: white;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
